# MySoccerManagerGame

./: .gitignore  CMakeLists.txt  README.md
include/: IExampleRepository.h
libs/SMRepository/: CMakeLists.txt  ExampleRepository.cpp  ExampleRepository.h
src/: main.cpp
tests/: CMakeLists.txt  test_ExampleRepository.cpp  test_main.cpp
